Fix transcription errors and add auto-download for Whisper models - Remove auto-detect counties feature (broken) - Add AUTO_UPDATE_PYTHON_PACKAGES auto-enable for local transcription - Add automatic Whisper model download after faster-whisper installation - Improve transcription error handling with detailed diagnostics - Add models/ and download_model_temp.py to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ __pycache__/
 *.pyc
 .cache/
 
+# Whisper models and temporary download scripts
+models/
+download_model_temp.py
+
 # Build
 dist/
 build/
