Update all npm packages to latest versions

--- a/package.json
+++ b/package.json
@@ -32,33 +32,33 @@
   "author": "poisonednumber",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.0",
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.19.0",
     "aws-sdk": "^2.1517.0",
-    "axios": "^1.6.0",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "busboy": "^1.6.0",
     "csv-parser": "^3.0.0",
-    "discord.js": "^14.14.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "form-data": "^4.0.0",
     "libsodium-wrappers": "^0.7.13",
-    "moment-timezone": "^0.5.43",
-    "multer": "^1.4.5-lts.1",
+    "moment-timezone": "^0.6.0",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
-    "openai": "^4.20.0",
+    "openai": "^6.15.0",
     "prism-media": "^1.3.5",
-    "public-ip": "^5.0.0",
-    "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0",
+    "public-ip": "^8.0.0",
+    "socket.io": "^4.8.2",
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0",
+    "winston": "^3.19.0",
     "archiver": "^7.0.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^30.2.0"
   },
   "engines": {
     "node": ">=18.0.0 <21.0.0"
